2005-10-26  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Fix on support for gzipped PPDs.

2005-10-25  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Added support for gzipping the custom
	  PPD files without needing to adapt the links in the printer
	  XML files.

2005-10-22  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-perl-data.c, foomatic-configure.in,
	  foomatic-ppdfile.in, foomatic-compiledb.in, lib/Foomatic/DB.pm:
	  Let the Foomatic tools use custom-made PPD files if they are
	  linked in the printer XML file and available in the local
	  Foomatic database.

2005-09-13  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Made "translate_printer_id()" not crashing
	  when it is called with a weird printer ID.

2005-08-23  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-combo-xml.c: Added the links to the ready-made PPD
	  files for all drivers to the overview output. Eliminated
	  compiler warnings.

	* foomatic-perl-data.c: Eliminated compiler warnings.

2005-08-15  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in: Added support for the new "beh"
	  (Backend Error Handler for CUPS) backend (included
	  in foomatic-filters now).

2005-08-05  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-perl-data.c: Added support for "<ppd>" tags in the
	  "<drivers>" list of the printer XML files. This is needed
	  to provide ready-made PPDs for arbitrary drivers on the
	  linuxprinting.org site.

2005-08-04  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in: Fixed bug of multiple "tc=..." items in
	  an /etc/printcap entry of LPRng not being supported.

2005-07-12  Till Kamppeter <till.kamppeter@gmx.net>

	* READNE: Updated links to Adobe PostScript specifications.

2005-05-29  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in, lib/Foomatic/DB.pm: Added support for
	  PPD file names with spaces (Mandriva bug #16172).
