@@ -1,9 +1,10 @@
 #!@PERL@
+# -*- perl -*-
 
-# This is foomatic-cleanupdrivers. It removes all driver XML files which have
-# an empty command line. So one can avoid that "unusable" printer/driver
-# combos are shown in frontends. This program also runs when Foomatic is not
-# installed.
+# This is foomatic-cleanupdrivers. It removes all driver XML files
+# which have an empty command line. So one can avoid that "unusable"
+# printer/driver combos are shown in frontends. This program also runs
+# when Foomatic is not installed.
 
 use Foomatic::Defaults;
 if ($#ARGV > -1) {
@@ -28,7 +29,8 @@ while ($driver = readdir(DRIVERDIR)) {
     close DRIVERENTRY;
     my $driverentry = join ('', @driverentryfield);
     if (($driverentry =~ m!<prototype>\s*</prototype>!sg) ||
-	($driverentry =~ m!<prototype\s*/\s*>!sg)) {
+	($driverentry =~ m!<prototype\s*/\s*>!sg) ||
+	($driverentry !~ m!<prototype[>/\s]!sg)) {
 	unlink("$libdir/db/source/driver/$driver") ||
 	    die "Cannot delete $driver!\n";
 	print "$driver has an empty command line, deleted!\n";
